--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-type-animation": "^3.1.0",
     "reactstrap": "^9.2.0",
     "sass": "^1.63.3",
     "swiper": "^9.4.1",
