--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "google-map-react": "^2.2.1",
     "iconsax-react": "^0.0.8",
     "react": "^18.2.0",
+    "react-active-menu": "^0.0.14",
     "react-bootstrap": "^2.8.0",
     "react-countdown": "^2.3.5",
     "react-countup": "^6.4.2",
